--- a/foodblog/src/components/FoodBlog.css
+++ b/foodblog/src/components/FoodBlog.css
@@ -87,8 +87,11 @@
     border: none;
     border-radius: 50%;
     cursor: pointer;
-    background-color: rgb(188, 209, 241);
+    background-color: rgb(14, 12, 12,0.7);
     z-index: 1000; /* Ensure button appears on top of other content */
+  }
+  .add-post-button i{
+    color: #ebe8e8;
   }
   .icon-container {
     position: relative;
@@ -97,7 +100,7 @@
     position: absolute;
     left: 7%;
     transform: translateX(-50%);
-    background-color: #01020b;
+    background-color:  rgb(14, 12, 12,0.7);
     color: #fff;
     font-size: 15px;
     padding: 5px 10px;
